fix footer alignment

--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,11 @@ h3 {
 .page-footer {
     padding-top: 5px;
     padding-bottom: 6px;
-    text-align: center;
     background-color: #F3F9F0;
     box-shadow: 0 -4px 4px #0000003b;
     width: 105%;
-    margin-left: -10px;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto 0 -20px;
 }
